<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="36dp"
     android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_week_01"
        style="@style/style_title_weekend_day"
        android:text="@string/prompt_sunday" />

    <TextView
        android:id="@+id/tv_week_02"
        style="@style/style_title_weekend_day"
        android:text="@string/prompt_monday" />

    <TextView
        android:id="@+id/tv_week_03"
        style="@style/style_title_weekend_day"
        android:text="@string/prompt_tuesday" />

    <TextView
        android:id="@+id/tv_week_04"
        style="@style/style_title_weekend_day"
        android:text="@string/prompt_wednesday" />

    <TextView
        android:id="@+id/tv_week_05"
        style="@style/style_title_weekend_day"
        android:text="@string/prompt_thursday" />

    <TextView
        android:id="@+id/tv_week_06"
        style="@style/style_title_weekend_day"
        android:text="@string/prompt_friday" />

    <TextView
        android:id="@+id/tv_week_07"
        style="@style/style_title_weekend_day"
        android:text="@string/prompt_sunday" />

</LinearLayout>
